--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,28 +4,37 @@ on:
   push:
     branches: ['develop']
 
+# GHCR에 이미지를 올리기 위한 권한 설정
+permissions:
+  contents: read
+  packages: write
+
 jobs:
-  build-and-test:
+  build-and-push:
     runs-on: ubuntu-latest
 
     steps:
       - name: 소스 코드 체크아웃
         uses: actions/checkout@v4
 
-      - name: Node.js 환경 세팅
-        uses: actions/setup-node@v4
+      - name: Docker Buildx 세팅
+        uses: docker/setup-buildx-action@v3
+
+      - name: GHCR 로그인
+        uses: docker/login-action@v3
         with:
-          node-version: '20'
-          cache: 'npm'
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: 패키지 설치
-        run: |
-          npm ci
-
-      - name: Next.js 빌드
-        run: npm run build
-        env:
-          API_URL: ${{ secrets.API_URL }}
+      - name: 이미지 빌드 및 GHCR 푸시
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          push: true
+          tags: ghcr.io/${{ github.repository }}:latest
+          build-args: |
+            API_URL=${{ secrets.API_URL }}
 
       # 성공 시 n8n을 통해 서버 배포 명령 전달
       - name: 배포 자동화 호출 (Success)
@@ -33,24 +42,23 @@ jobs:
         run: |
           curl -X POST ${{ secrets.N8N_WEBHOOK_URL }} \
           -H "Content-Type: application/json" \
-          -H "User-Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/120.0.0.0 Safari/537.36" \
           -d '{
             "status": "success",
             "project": "Wine",
             "branch": "${{ github.ref_name }}",
-            "author": "${{ github.actor }}"
+            "author": "${{ github.actor }}",
+            "image": "ghcr.io/${{ github.repository }}:latest"
           }'
 
-      # 실패 시 디코 알림을 위한 n8n 호출 (에러 리포트)
+      # 실패 시 n8n을 통해 디스코드 알림 전달
       - name: 빌드 실패 알림 (Failure)
         if: failure()
         run: |
           curl -X POST ${{ secrets.N8N_WEBHOOK_URL }} \
           -H "Content-Type: application/json" \
-          -H "User-Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/120.0.0.0 Safari/537.36" \
           -d '{
             "status": "failure",
             "project": "Wine",
             "branch": "${{ github.ref_name }}",
-            "error_log": "Build process failed in GitHub Actions"
+            "error_log": "GitHub Actions Docker Build Failed"
           }'
