--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,7 +32,7 @@ jobs:
         with:
           context: .
           push: true
-          tags: ghcr.io/${{ github.repository }}:latest
+          tags: ghcr.io/codeit-21-part-3-team-3/wine:latest
           build-args: |
             API_URL=${{ secrets.API_URL }}
 
@@ -47,7 +47,7 @@ jobs:
             "project": "Wine",
             "branch": "${{ github.ref_name }}",
             "author": "${{ github.actor }}",
-            "image": "ghcr.io/${{ github.repository }}:latest"
+            "image": "ghcr.io/codeit-21-part-3-team-3/wine:latest"
           }'
 
       # 실패 시 n8n을 통해 디스코드 알림 전달
