fix: 빌드 최적화 적용

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,3 +8,7 @@ services:
       - '2133:3000'
     environment:
       - API_URL=${API_URL}
+      - NODE_ENV=production
+    volumes:
+      - ./next-cache:/app/.next/cache
+    restart: always
